# mock-investor

./: .gitignore  .gitmodules  CMakeLists.txt  Company.cpp  Company.h  Database.cpp  HTTPDownloader.cpp  HTTPDownloader.h  README.md  Stock.cpp  Stock.h  Trader.cpp  Trader.h  main.cpp  prompts.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  Company.cpp  Company.h  Database.cpp  Database.h  HTTPDownloader.cpp  Stock.cpp  Trader.h  main.cpp  prompts.cpp
tests/: CMakeLists.txt  CompanyTest.cpp  DatabaseTest.cpp  PromptsTest.cpp  TraderTest.cpp
